Fix `neon` flicker

--- a/sass/base/animators/_neon.scss
+++ b/sass/base/animators/_neon.scss
@@ -25,13 +25,13 @@ $deactivated-styles: none;
 
   @each $value in $values {
     $results: list.append($results, as-per($value - 0.001), $separator: comma);
-    $results: list.append($results, as-per($value + 0.1), $separator: comma);
+    $results: list.append($results, as-per($value + 1), $separator: comma);
   }
   @return base-utils.list-to-string($results);
 }
 
 @mixin frames {
-  $ons: [25, 35, 50, 60, 80, 99];
+  $ons: [10, 20, 30, 60, 70, 99];
   @keyframes turn-on {
     #{bracket-values($ons)} {
       @include utils.render-styles($deactivated-styles);
@@ -56,7 +56,8 @@ $deactivated-styles: none;
 
 @mixin setup($duration: 20s) {
   .active {
-    animation: turn-on 4s linear 0ms 1, flicker 15s linear 3s infinite alternate;
+    animation: turn-on 10s linear 0ms 1,
+      flicker 15s linear 3s infinite alternate;
   }
 
   .inactive {
