--- a/static/css/clocks/neon.css
+++ b/static/css/clocks/neon.css
@@ -80,7 +80,7 @@ body {
 }
 
 .active {
-  animation: turn-on 4s linear 0ms 1, flicker 15s linear 3s infinite alternate;
+  animation: turn-on 10s linear 0ms 1, flicker 15s linear 3s infinite alternate;
 }
 
 .inactive {
@@ -89,17 +89,17 @@ body {
 }
 
 @keyframes turn-on {
-  24.999%, 25.1%, 34.999%, 35.1%, 49.999%, 50.1%, 59.999%, 60.1%, 79.999%, 80.1%, 98.999%, 99.1% {
+  9.999%, 11%, 19.999%, 21%, 29.999%, 31%, 59.999%, 61%, 69.999%, 71%, 98.999%, 100% {
     color: black;
     text-shadow: 0 0 1px #00ff55;
   }
-  25%, 35%, 50%, 60%, 80%, 99% {
+  10%, 20%, 30%, 60%, 70%, 99% {
     color: white;
     text-shadow: 0 0 0.5vh white, 0 0 1vh white, 0 0 2vh #00ff55, 0 0 3vh #00ff55, 0 0 4vh #00ff55;
   }
 }
 @keyframes flicker {
-  0.999%, 1.1%, 34.999%, 35.1%, 35.999%, 36.1%, 69.999%, 70.1%, 70.999%, 71.1%, 89.999%, 90.1%, 98.999%, 99.1% {
+  0.999%, 2%, 34.999%, 36%, 35.999%, 37%, 69.999%, 71%, 70.999%, 72%, 89.999%, 91%, 98.999%, 100% {
     color: white;
     text-shadow: 0 0 0.5vh white, 0 0 1vh white, 0 0 2vh #00ff55, 0 0 3vh #00ff55, 0 0 4vh #00ff55;
   }
